k3s/drawio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drawio
  namespace: drawio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drawio
  template:
    metadata:
      labels:
        app: drawio
    spec:
      containers:
        - name: drawio
          image: jgraph/drawio:31.1.2
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false

---
apiVersion: v1
kind: Service
metadata:
  name: drawio
  namespace: drawio
spec:
  selector:
    app: drawio
  ports:
    - port: 80
      targetPort: 8080
