k3s/drawio/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: drawio
  namespace: drawio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`drawio.d-kline.org`)
      kind: Rule
      middlewares:
        - name: local-only
          namespace: traefik
        - name: authelia
          namespace: traefik
        - name: security-headers
          namespace: traefik
      services:
        - name: drawio
          port: 80
  tls: {}
